fix: reduce fav icon z-index to minimum required

--- a/app/styles/pages/_media-pages.scss
+++ b/app/styles/pages/_media-pages.scss
@@ -136,7 +136,7 @@
     }
   }
   @media (max-width: 767px) {
-    z-index: 999;
+    z-index: 1;
     background-color: $foreground-background-color;
     margin-top: -16px;
   }
